# ssubmit

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yaml  release.yaml
install/: install.sh
src/: cli.rs  lib.rs  main.rs
