[package]
name = "ssubmit"
description = "Submit sbatch jobs without having to create a submission script"
version = "0.3.0"
edition = "2021"
authors = ["Michael Hall <michael@mbh.sh>"]
repository = "https://github.com/mbhall88/ssubmit"
homepage = "https://github.com/mbhall88/ssubmit"
readme = "README.md"
license-file = "LICENSE"
rust-version = "1.58"
keywords = ["slurm", "sbatch", "wrapper"]
categories = ["science", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[badges]
maintenance = { status = "actively-developed" }

[dependencies]
clap = { version = "3.2.25", features = ["derive"] }
anyhow = "1.0.79"
thiserror = "1.0.56"
regex = "1.7.3"
log = "0.4.18"
env_logger = "0.10.1"
duration-str = "0.7.1"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
