[package]
name = "ssubmit"
description = "Submit sbatch jobs without having to create a submission script"
version = "1.0.0"
edition = "2021"
authors = ["Michael Hall <michael@mbh.sh>"]
repository = "https://github.com/mbhall88/ssubmit"
homepage = "https://github.com/mbhall88/ssubmit"
readme = "README.md"
license-file = "LICENSE"
rust-version = "1.58"
keywords = ["slurm", "sbatch", "wrapper"]
categories = ["science", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[badges]
maintenance = { status = "actively-developed" }

[dependencies]
clap = { version = "4.5.16", features = ["derive", "env"] }
anyhow = "1.0.86"
regex = "1.10.6"
log = "0.4.22"
env_logger = "0.11.5"
duration-str = "0.11.2"
byte-unit = "5.1.4"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
